# urbr-on-device

./: .gitignore  .gitmodules  Cargo.toml  README.md  make_data.py  parameter_for_tch.pt
benches/: benchmark.rs
bindings/go/: Cargo.toml  test.go
bindings/go/src/: lib.rs
bindings/wasm/: Cargo.toml  test.html
bindings/wasm/src/: lib.rs
src/: data.rs  lib.rs  scaler.rs
src/nn/: dense.rs  loader.rs  lstm.rs  mod.rs  sigmoid.rs  util.rs
tests/: test.rs
