[package]
name    = "urbr"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level     = 3
strip         = "symbols"
lto           = true
panic         = "abort"
codegen-units = 1
rpath         = false

[[bench]]
name    = "benchmark"
harness = false

[dev-dependencies]
divan = "0.1.14"
tch   = { version = "^0.15.0", features = ["download-libtorch"] }
rand  = { version = "^0.8.5" , features = ["small_rng"        ] }

[dependencies]
num-traits   = "^0.2.18"
